--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,8 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/develoer/wpilib/user/java/lib/microlog-logger-core-2.3.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/develoer/wpilib/user/java/lib/navx_frc.jar" sourcepath="C:/Users/develoer/wpilib/user/java/lib/KauiLabs/src"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/microlog-logger-core-2.3.5.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/navx_frc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
